name:                naperianfun
version:             0.1.0.0
description:         naperian experiments
homepage:            https://github.com/o1lo01ol1o/naperianfun
bug-reports:         https://github.com/o1lo01ol1o/naperianfun/issues
license:             MIT
license-file:        LICENSE
author:              tim pierson
maintainer:          tim.pierson@gmail.com
copyright:           2018 tim pierson
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.2.2

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -Wall
  build-depends:       base
  default-language:    Haskell2010

test-suite naperianfun-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , naperianfun
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark naperianfun-benchmark
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       base
                     , criterion
                     , naperianfun

source-repository head
  type:                git
  location:            https://github.com/o1lo01ol1o/naperianfun.git
